<resources>
    <string name="app_name">Smart Manager</string>
    <string name="smart_manager">Smart Manager</string>
    <string name="onesignal_app_id">06a1817b-6dad-4d2a-9e0d-98d5ba2e2055</string>
    <string name="onesignal_projectid">790494337781</string>
    <string name="action_settings">Settings</string>
    <string name="comments_colan">Comments:</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Smart\nManager</string>
    <string name="home">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="no_internet_connection">Please check your internet connection or try again later.</string>
    <string name="error_getting_data">Error while getting data please try later.</string>
    <string name="error_sendiing_data">Error while sending brochure please try later.</string>
    <string name="error_while_saving_condition_data">Error while save conditions.</string>
    <string name="error_while_saving_seller_data">Error while saving seller.</string>
    <string name="error_while_saving_Incondition_data">Error while saving InteriorReconditions</string>
    <string name="error_while_saving_VehicleExtras">Error while saving VehicleExtras</string>
    <string name="error_while_saving_purchase_details_data">Error while save purchase details</string>
    <string name="error_occured_try_later">Error occurred.Try after some time</string>
    <string name="pleasewait">Please wait&#8230;</string>
    <string name="loading">Please wait&#8230;</string>
    <string name="load_more">More</string>
    <string name="loading_">Loading&#8230;</string>
    <string name="more">More</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="invalid_username_password_please_contact">Your username and or password is invalid. \n\n Please contact:</string>
    <string name="no_connection">No connection</string>
    <string name="no_data">No data</string>
    <string name="no_item_to_select">No item to select</string>
    <string name="network_error">Network error</string>
    <string name="no_record_found">No record(s) found.</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="blog">Blog</string>
    <string name="new_post">New Post</string>
    <string name="new_post_plus">+ New Post</string>
    <string name="search">Search</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="activ_post">Active Posts</string>
    <string name="inactive_post">Inactive Posts</string>
    <string name="no_post_found">No posts found</string>
    <string name="end">End</string>
    <string name="edit">Edit</string>
    <string name="swipe_to_view">&lt; Swipe to view more &gt;</string>
    <string name="type">Type:</string>
    <string name="images">Images:</string>
    <string name="days_remainig">Time Remaining:</string>
    <string name="Active">Active:</string>
    <string name="active_">Make active</string>
    <string name="Created">Created:</string>
    <string name="blog_ended_successfully">Blog ended successfully</string>
    <string name="failed_to_end_blog">Failed to end blog, please try later</string>
    <string name="create_blog">Create Blog</string>
    <string name="edit_blog">Edit Blog</string>
    <string name="select_blog_post_type">Select blog post type</string>
    <string name="title">Title*</string>
    <string name="details">Details</string>
    <string name="author">Author (Optional)</string>
    <string name="active_star">Active*</string>
    <string name="ends_never">Ends Never</string>
    <string name="mandatory">*Indicates mandatory fields</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="blog_post_type">Post Type*</string>
    <string name="save_and_close">Save &amp; Close</string>
    <string name="preview_blog">Preview Blog</string>
    <string name="customer_delivery">Customer Delivery</string>
    <string name="delivery">Delivery</string>
    <string name="log_activity">Log Activity</string>
    <string name="client_filter">Client Filter</string>
    <string name="select_Client">Select Client</string>
    <string name="type_">Type*</string>
    <string name="details_">Details*</string>
    <string name="person_seen_none">Person Seen / None</string>
    <string name="time_spent">Time Spent</string>
    <string name="select_date">Select Date</string>
    <string name="internal">Internal</string>
    <string name="today">Today</string>
    <string name="check_in">Check In</string>
    <string name="or">OR</string>
    <string name="address">address</string>
    <string name="location_service_disable_message">Your location service seems to be disabled, do you want to enable it?</string>
    <string name="location_not_found">Location not found</string>
    <string name="please_select_client">Please select client</string>
    <string name="please_select_planner_type">Please select planner type</string>
    <string name="please_select_recipient">Please select recipient</string>
    <string name="please_enter_details">Please enter details</string>
    <string name="please_select_time_spent">Please select time spent</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="log_activity_saved_successfully">Log activity saved successfully</string>
    <string name="could_not_log_activity">Could not save the log activity</string>
    <string name="task_accepted_successfully">Task accepted successfully</string>
    <string name="task_rejected_successfully">Task rejected successfully</string>
    <string name="task_accepted_closed_successfully">Task accepted and closed successfully</string>
    <string name="task_closed">Task closed successfully</string>
    <string name="select_reciepient">Select Recipient(if not me)*</string>
    <string name="title_">Title</string>
    <string name="title_compulsary">Title*</string>
    <string name="task_title">Task Title*</string>
    <string name="select_time">Select Time</string>
    <string name="by_day_end">By Day End</string>
    <string name="select_calender_time">Send Calendar Event</string>
    <string name="new_task_saved_successfully">New task saved successfully</string>
    <string name="could_not_save_new_task">Could not save the new task</string>
    <string name="hidefilter">Hide Filter</string>
    <string name="showfilter">Show Filter</string>
    <string name="showsearch">Show Search</string>
    <string name="year">Year</string>
    <string name="yearz">Year <sup><small>*</small></sup></string>
    <string name="make">Make</string>
    <string name="models">Model</string>
    <string name="models_compulsary">Model*</string>
    <string name="variant">Variant</string>
    <string name="variantz">Variant <sup><small>*</small></sup></string>
    <string name="selectall">-- Select / All --</string>
    <string name="buy">Buy</string>
    <string name="to">to</string>
    <string name="defualt_date">1990</string>
    <string name="sortby">Sort By</string>
    <string name="none">-- None --</string>
    <string name="photo_asc">Photos "(Ascending)"</string>
    <string name="doyouwanttoplacebid">Do you want to bid on this vehicle with your bid amount?</string>
    <string name="doyouwanttosetautobid">Do you want set auto bid ?</string>
    <string name="entervalidamount">Enter valid amount</string>
    <string name="increments">Min Bid Increment</string>
    <string name="bestoffer">Best Offer So Far</string>
    <string name="enableAutomatedBidding">Automated Bidding</string>
    <string name="activate">Activate</string>
    <string name="enter_valid_bid_limit">Enter valid bid limit</string>
    <string name="placebid">Place Bid</string>
    <string name="yourbid">Your Bid</string>
    <string name="askingprice">Asking Price</string>
    <string name="highest_bid_so_far">Highest Bid So Far</string>
    <string name="minbid">Min Bid</string>
    <string name="buynowprice">Buy Now Price</string>
    <string name="bidnowcloses">Bid Closes On</string>
    <string name="stockno">Stock Number:</string>
    <string name="regno">Reg Number:</string>
    <string name="vinno">VIN Number:</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>
    <string name="setbidlimit">Please enter your bid amount limit</string>
    <string name="amendmessage">Your bid limit set successfully</string>
    <string name="placebidmessage">Your bid is successful</string>
    <string name="select_year">Select Year</string>
    <string name="scan_vin">Scan VIN</string>
    <string name="colour_star">Colour*</string>
    <string name="reg_no">Reg No</string>
    <string name="engine_no">Engine No</string>
    <string name="vin_no">VIN No</string>
    <string name="update">Update</string>
    <string name="basic_info">Basic Info</string>
    <string name="enter_milage">Mileage*</string>
    <string name="enter_stock_no">Stock No*</string>
    <string name="enter_price">Price Retail*</string>
    <string name="enter_price_trade">Price Trade / NA</string>
    <string name="program_vehicle">Program vehicle</string>
    <string name="enter_program_name">Program Name</string>
    <string name="is_retail">Is retail</string>
    <string name="is_tender">Is trade</string>
    <string name="conditions">Condition (Recommended)</string>
    <string name="comments">Comments (Recommended)</string>
    <string name="extras">Extras (Recommended)</string>
    <string name="additional_info">Additional Info</string>
    <string name="enter_oem_code">OEM Code</string>
    <string name="enter_location">Location</string>
    <string name="enter_trim">Trim</string>
    <string name="enter_cost_r">Cost R</string>
    <string name="enter_stand_r">Stand in R</string>
    <string name="dont_let">Don\'t let the import override info</string>
    <string name="ignore_settings">Force Active</string>
    <string name="activate_cpa">Activate CPA error message</string>
    <string name="remove_vehicle">Remove vehicle</string>
    <string name="add_to_tender">Add To Tender</string>
    <string name="internal_note">Internal Note</string>
    <string name="note">A vehicle is removed from Trade and Retail if it is added to a Tender.</string>
    <string name="create_special">+ Create Special</string>
    <string name="list_active_specials">Active Specials</string>
    <string name="list_publish_specials">Specials Awaiting Publish</string>
    <string name="list_expire_specials">Expired Specials</string>
    <string name="date_compulsary">Date*</string>
    <string name="specials_excluded_msg">Specials for sold vehicles will be \n excluded from lists.</string>
    <string name="type1">Type</string>
    <string name="audited_today">Audited Today</string>
    <string name="still_to_audit">Still to Audit</string>
    <string name="audit_history">Audit History</string>
    <string name="scan_vin_note">Scan VIN to add vehicle to audit. Geo location and user will be recorded.</string>
    <string name="join_now">Help</string>
    <string name="please_contacts"><html>Please contact <small>support@ix.co.za</small></html></string>
    <string name="contact_phone"><html>or Phone <small>0861 292 999</small></html></string>
</resources>