<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnCreateSpecials"
        style="@style/BlueButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_special" />

    <Button
        android:id="@+id/btnListPublishSpecials"
        style="@style/GreyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/list_publish_specials" />

    <Button
        android:id="@+id/btnListActiveSpecials"
        style="@style/GreyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/list_active_specials" />

    <Button
        android:id="@+id/btnListExpiredSpecials"
        style="@style/GreyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/list_expire_specials" />

    <com.nw.widget.CustomTextViewLight
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/specials_excluded_msg" />

</LinearLayout>