<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.nw.widget.CustomButton
            android:id="@+id/btnScanVIN"
            style="@style/BlueButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scan_vin" />

        <com.nw.widget.CustomTextViewLight
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_vin_note" />

        <com.nw.widget.CustomButton
            android:id="@+id/btnAuditedToday"
            style="@style/GreyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/audited_today" />
        
        <com.nw.widget.CustomButton
            android:id="@+id/btnStillAudit"
            style="@style/GreyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/still_to_audit" />
        
        <com.nw.widget.CustomButton
            android:id="@+id/btnAuditHistory"
            style="@style/GreyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/audit_history" />
        
    </LinearLayout>

</LinearLayout>