<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.nw.widget.CustomEditText
            android:id="@+id/edStartDate"
            style="@style/CalendarEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:hint="@string/date_compulsary" />

        <com.nw.widget.CustomTextViewLight
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/to" />

        <com.nw.widget.CustomEditText
            android:id="@+id/edEndDate"
            style="@style/CalendarEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:hint="@string/date_compulsary" />
    </TableRow>

    <com.nw.widget.CustomButton
        android:id="@+id/bSearch"
        style="@style/BlueButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/search" />
    
   <include layout="@layout/fragment_listview"/>

</LinearLayout>